# SerenLoci

./: .gitignore  Makefile  README.md  SECURITY.md  SerenLoci.slnx
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
SerenLoci/: README.md  SerenLoci.pyproj  pyproject.toml  seren-loci.service.sample  seren-loci.yaml.sample
SerenLoci/seren_loci/: __init__.py  __main__.py  app.py  config.py  store.py
SerenLoci/seren_loci/mcp/: __init__.py  server.py  tools.py
SerenLoci/seren_loci/models/: __init__.py  schemas.py
SerenLoci/seren_loci/routes/: __init__.py  fact.py  facts.py  search.py
SerenLoci/seren_loci/tests/: test_mcp_mount.py
SerenLoci/seren_loci/viewer/: loci.html
SerenLoci/seren_loci/viewer/ui/: body.html  header_aside.html  scripts.js  styles.css  tabs.html
SerenLoci/tests/: conftest.py  test_embedder_reconcile.py  test_fts_stopword_bleed.py  test_hybrid_finder.py  test_mcp_tools.py  test_routes.py  test_store.py  test_vector_sql.py
SerenLociVSCode/: README.md  package-lock.json  package.json  publish.ps1
SerenLociVSCode/seren_loci-vscode/: esbuild.js
SerenLociVSCode/seren_loci-vscode/src/: client.ts  config.ts  extension.ts  tools.ts
SerenLociVSCode/test/: client.test.ts
